--- a/Styles/style.css
+++ b/Styles/style.css
@@ -526,6 +526,7 @@ body {
   padding: 15px 30px;
   margin: 5px;
   border: none;
+  margin-left: 30px;
   border-radius: 20px;
   background-color: #000912;
   color: white;
