--- a/Styles/style.scss
+++ b/Styles/style.scss
@@ -383,6 +383,7 @@ body {
             padding: 15px 30px;
             margin: 5px;
             border: none;
+            margin-left: 30px;
             border-radius: 20px;
             background-color: $primary-color-blue-dark;
             color: white;
