--- a/Styles/style.css
+++ b/Styles/style.css
@@ -406,6 +406,7 @@ body {
   border-radius: 10px 10px;
   height: 310px;
   width: auto;
+  font-family: "Raleway", sans-serif;
   overflow: hidden;
 }
 
@@ -525,6 +526,7 @@ body {
   font-weight: bold;
   padding: 15px 30px;
   margin: 5px;
+  text-transform: uppercase;
   border: none;
   margin-left: 30px;
   border-radius: 20px;
@@ -689,7 +691,6 @@ body {
 }
 
 #Work .work-card .work-card-button, #Work .work-card .work-card-button a {
-  font-weight: bold;
   border: none;
   display: -webkit-box;
   display: -ms-flexbox;
