--- a/Styles/style.scss
+++ b/Styles/style.scss
@@ -382,6 +382,7 @@ body {
             font-weight: bold;
             padding: 15px 30px;
             margin: 5px;
+            text-transform: uppercase;
             border: none;
             margin-left: 30px;
             border-radius: 20px;
@@ -490,7 +491,6 @@ body {
 
                 }
                 .work-card-button, .work-card-button a {
-                    font-weight: bold;
                     border: none;
                     display: flex;
                     justify-content: center;
